# solution-Josip_Cuzic

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: f92acc1e2af6_create_tickets_table.py
src/app/: config.py  main.py  mappers.py
src/app/api/: deps.py
src/app/api/routes/: auth.py  health.py  stats.py  tickets.py
src/app/core/: cache.py  logging.py  security.py
src/app/db/: base.py  models.py  session.py
src/app/schemas/: auth.py  stats.py  ticket.py
src/app/services/: dummyjson.py  stats.py  sync.py  tickets.py
tests/: conftest.py  test_auth.py  test_cache.py  test_mappers.py  test_migrations.py  test_stats_health.py  test_sync.py  test_tickets_read.py  test_tickets_write.py
